--- a/styles.css
+++ b/styles.css
@@ -27,18 +27,26 @@ body
 
 .page
 {
-	height: 100%;
+	height: 94%;
 	width: 84%;
 	float:left;
 }
 
 #inventory
 {
-	height: 100%;
+	height: 94%;
 	width: 13%;
 	float: left;
 	border: 1px solid black;
 	text-align: center;
+}
+
+#footer
+{
+	position: fixed; 
+	bottom: 0px; 
+	left: 10px; 
+	font-size: 15px;
 }
 
 .nav_button
@@ -62,7 +70,7 @@ body
 {
 	width: 84%;
 	text-align: center;
-	padding: 10px 0px;
+	padding: 0px 0px;
 }
 
 .farm_section
